--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -46,3 +46,30 @@ a {
 ul {
   list-style-type: none;
 }
+
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 16px;
+}
+
+.right {
+  margin-right: 16px;
+}
+
+.left {
+  margin-left: 16px;
+}
+
+ul {
+  display: flex;
+  gap: 16px;
+  padding: 0;
+}
