--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,6 +10,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  width: 100%;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +25,25 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.content {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+  padding: 40px;
+}
+
+.item {
+  width: 200px;
+}
+
+.text {
+  text-align: center;
+}
+
+.img-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
