--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -67,3 +67,26 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+/**/
+
+.modal {
+  display: flex
+}
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.right {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 16px 16px 16px 0px;
+  justify-content: space-between;
+}
+.left {
+  display: flex;
+  justify-content: center;
+  padding: 16px;
+}
